# rag-workshop-wtlab2025

./: 0.About-me.ipynb  1.Introduction-to-LLMs-And-RAG.ipynb  2.GettingStarted-with-Open-Source-LLMs.ipynb  3.RAG-Workflow.ipynb  4.Parsing-PDFs.ipynb  7.streamlit_ui.py  8.More-Advanced-RAG.ipynb  README.md  pyproject.toml
docling-pdf-parse/: chapter02-05.doctags  chapter02-05.json  chapter02-05.md  chapter02.doctags  chapter02.json  chapter02.md
